--- a/46_APIWithTokenHomework/Base.lproj/Main.storyboard
+++ b/46_APIWithTokenHomework/Base.lproj/Main.storyboard
@@ -1146,14 +1146,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwl-FH-zMv">
-                                <rect key="frame" x="20" y="562" width="464" height="18"/>
-                                <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="15"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ok3-hh-Jjd">
-                                <rect key="frame" x="492" y="560" width="88" height="22"/>
+                                <rect key="frame" x="492" y="558" width="88" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="88" id="5Uf-6R-ZKg"/>
                                     <constraint firstAttribute="width" constant="88" id="82E-Fo-cNY"/>
@@ -1170,36 +1164,68 @@
                                     </mask>
                                 </variation>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ojb-fr-TMB">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ojb-fr-TMB">
+                                <rect key="frame" x="0.0" y="20" width="600" height="504"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pwl-FH-zMv">
+                                <rect key="frame" x="20" y="532" width="560" height="17.5"/>
+                                <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="15"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ojb-fr-TMB" firstAttribute="centerY" secondItem="C5R-Yx-0Sb" secondAttribute="centerY" id="29s-GM-ZSb"/>
+                            <constraint firstItem="ok3-hh-Jjd" firstAttribute="top" secondItem="pwl-FH-zMv" secondAttribute="bottom" constant="8.5" id="2Qf-kJ-U0Z"/>
                             <constraint firstAttribute="trailing" secondItem="ok3-hh-Jjd" secondAttribute="trailing" constant="20" id="3Hb-bZ-4bs"/>
+                            <constraint firstItem="ojb-fr-TMB" firstAttribute="top" secondItem="fTx-ty-W7I" secondAttribute="bottom" id="5CZ-Z9-7WT"/>
+                            <constraint firstItem="pwl-FH-zMv" firstAttribute="top" secondItem="ojb-fr-TMB" secondAttribute="bottom" constant="10.5" id="7bv-nu-IQd"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="pwl-FH-zMv" secondAttribute="bottom" constant="12" id="7w8-lE-TtB"/>
                             <constraint firstItem="pwl-FH-zMv" firstAttribute="leading" secondItem="C5R-Yx-0Sb" secondAttribute="leading" constant="20" id="89k-N8-Xsx"/>
+                            <constraint firstItem="ojb-fr-TMB" firstAttribute="leading" secondItem="C5R-Yx-0Sb" secondAttribute="leading" id="E0B-C1-Lj1"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="pwl-FH-zMv" secondAttribute="bottom" constant="8" id="G3U-ul-tga"/>
                             <constraint firstAttribute="leadingMargin" secondItem="pwl-FH-zMv" secondAttribute="leading" id="KWD-Ov-GXD"/>
                             <constraint firstItem="ok3-hh-Jjd" firstAttribute="leading" secondItem="pwl-FH-zMv" secondAttribute="trailing" constant="8" id="Pde-wH-ior"/>
+                            <constraint firstAttribute="trailing" secondItem="ojb-fr-TMB" secondAttribute="trailing" id="PwP-Bj-NKS"/>
+                            <constraint firstItem="ok3-hh-Jjd" firstAttribute="top" secondItem="ojb-fr-TMB" secondAttribute="bottom" constant="40" id="SN4-1D-iY6"/>
                             <constraint firstItem="ok3-hh-Jjd" firstAttribute="leading" secondItem="pwl-FH-zMv" secondAttribute="trailing" constant="8" id="XwQ-Wp-8HB"/>
+                            <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="ok3-hh-Jjd" secondAttribute="bottom" constant="20" id="ZOq-NH-Gqb"/>
+                            <constraint firstItem="ojb-fr-TMB" firstAttribute="top" secondItem="fTx-ty-W7I" secondAttribute="bottom" constant="80" id="aXg-Tx-szw"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="ok3-hh-Jjd" secondAttribute="bottom" constant="55" id="ccQ-xO-59c"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="ok3-hh-Jjd" secondAttribute="bottom" constant="18" id="dGs-qi-PfO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ok3-hh-Jjd" secondAttribute="trailing" id="kdC-8w-WEf"/>
+                            <constraint firstItem="ojb-fr-TMB" firstAttribute="top" secondItem="fTx-ty-W7I" secondAttribute="bottom" constant="95" id="m3i-VZ-Xsi"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="pwl-FH-zMv" secondAttribute="leading" id="m44-gV-Ahc"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="pwl-FH-zMv" secondAttribute="bottom" constant="20" id="nGF-aJ-GmS"/>
+                            <constraint firstItem="ojb-fr-TMB" firstAttribute="top" secondItem="fTx-ty-W7I" secondAttribute="bottom" id="oVR-AC-KcI"/>
+                            <constraint firstItem="pwl-FH-zMv" firstAttribute="top" secondItem="ojb-fr-TMB" secondAttribute="bottom" constant="8" id="oW3-5e-R4S"/>
                             <constraint firstAttribute="trailing" secondItem="ok3-hh-Jjd" secondAttribute="trailing" constant="20" id="rjj-dA-IfL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pwl-FH-zMv" secondAttribute="trailing" id="tY7-pN-95A"/>
                             <constraint firstItem="ojb-fr-TMB" firstAttribute="centerX" secondItem="C5R-Yx-0Sb" secondAttribute="centerX" id="wHC-w6-28F"/>
                             <constraint firstItem="4el-Wz-nBe" firstAttribute="top" secondItem="ok3-hh-Jjd" secondAttribute="bottom" constant="8" id="ybi-n7-XPS"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="29s-GM-ZSb"/>
+                                <exclude reference="aXg-Tx-szw"/>
+                                <exclude reference="m3i-VZ-Xsi"/>
+                                <exclude reference="oVR-AC-KcI"/>
+                                <exclude reference="wHC-w6-28F"/>
+                                <exclude reference="7bv-nu-IQd"/>
+                                <exclude reference="89k-N8-Xsx"/>
                                 <exclude reference="KWD-Ov-GXD"/>
                                 <exclude reference="7w8-lE-TtB"/>
                                 <exclude reference="G3U-ul-tga"/>
                                 <exclude reference="ccQ-xO-59c"/>
+                                <exclude reference="dGs-qi-PfO"/>
+                                <exclude reference="nGF-aJ-GmS"/>
                                 <exclude reference="ybi-n7-XPS"/>
                                 <exclude reference="3Hb-bZ-4bs"/>
                                 <exclude reference="Pde-wH-ior"/>
+                                <exclude reference="SN4-1D-iY6"/>
+                                <exclude reference="XwQ-Wp-8HB"/>
+                                <exclude reference="rjj-dA-IfL"/>
                             </mask>
                         </variation>
                     </view>
